# ocr-dictionary

./: .gitignore  README.md  anki.py  cc_cedict_parser.py  config.json  convert_pinyin.py  pyproject.toml  script.py  vocab.py
utils/: anki.py  vocab.py
